--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
     restart: unless-stopped
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
     depends_on:
       - eureka-server
+      - redis
     networks:
       - nexo-network
 
@@ -113,6 +116,72 @@ services:
     restart: unless-stopped
     networks:
       - nexo-network
+
+  feed-service:
+    container_name: feed-service
+    build: ./services/feed-service
+    ports:
+      - "8084:8084"
+    restart: unless-stopped
+    environment:
+      SERVER_PORT: 8084
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      SPRING_DATASOURCE_URL: jdbc:postgresql://user-db:5432/userdb
+      SPRING_DATASOURCE_USERNAME: user
+      SPRING_DATASOURCE_PASSWORD: pass
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: http://keycloak:8080/realms/nexo-network
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: http://keycloak:8080/realms/nexo-network/protocol/openid-connect/certs
+      GRPC_CLIENT_POSTS_ADDRESS: static://post-service:9094
+      GRPC_CLIENT_USERS_ADDRESS: static://user-service:9092
+    depends_on:
+      - eureka-server
+      - user-db
+      - redis
+      - keycloak
+      - post-service
+      - user-service
+    networks:
+      - nexo-network
+
+  interaction-service:
+    container_name: interaction-service
+    build: ./services/interaction-service
+    ports:
+      - "8083:8083"
+      - "9095:9095"
+    restart: unless-stopped
+    environment:
+      SERVER_PORT: 8083
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      SPRING_DATASOURCE_URL: jdbc:postgresql://user-db:5432/userdb
+      SPRING_DATASOURCE_USERNAME: user
+      SPRING_DATASOURCE_PASSWORD: pass
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: http://keycloak:8080/realms/nexo-network
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: http://keycloak:8080/realms/nexo-network/protocol/openid-connect/certs
+      SPRING_KAFKA_BOOTSTRAP-SERVERS: kafka:9092
+      SPRING_KAFKA_PRODUCER_KEY-SERIALIZER: org.apache.kafka.common.serialization.StringSerializer
+      SPRING_KAFKA_PRODUCER_VALUE-SERIALIZER: org.springframework.kafka.support.serializer.JsonSerializer
+      SPRING_KAFKA_PRODUCER_ACKS: all
+      SPRING_KAFKA_PRODUCER_PROPERTIES_ENABLE_IDEMPOTENCE: true
+      SPRING_KAFKA_PRODUCER_PROPERTIES_MAX_IN_FLIGHT_REQUESTS_PER_CONNECTION: 5
+      GRPC_SERVER_PORT: 9095
+      GRPC_CLIENT_USERS_ADDRESS: static://user-service:9092
+      GRPC_CLIENT_POSTS_ADDRESS: static://post-service:9094
+    depends_on:
+      - eureka-server
+      - user-db
+      - redis
+      - keycloak
+      - kafka
+      - user-service
+      - post-service
+    networks:
+      - nexo-network
+
   postgres:
     image: postgres:15
     environment:
@@ -174,6 +243,8 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - nexo-network
 
   kafka:
     image: confluentinc/cp-kafka:7.6.1
@@ -190,6 +261,8 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - nexo-network
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -202,6 +275,8 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+    networks:
+      - nexo-network
 
 networks:
   nexo-network:
