--- a/services/feed-service/pom.xml
+++ b/services/feed-service/pom.xml
@@ -169,6 +169,10 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 
     </dependencies>
 
