--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 8088
+logging:
+  level:
+    org.springframework.security: DEBUG
 spring:
   application:
     name: notifications
