--- a/services/upload-file-service/pom.xml
+++ b/services/upload-file-service/pom.xml
@@ -128,6 +128,12 @@
             <version>0.12.6</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.34.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
