--- a/services/interaction-service/src/main/resources/application.yml
+++ b/services/interaction-service/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  cache:
+    type: redis
   h2:
     console:
       enabled: false
